--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				aria-expanded="false" aria-controls="navbar"><i></i></a>
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
-					<div class="author-img" <img src="images/about.jpeg" alt="Profile Picture"></div>
+					<div class="author-img" <img src="images/about.JPG" alt="Profile Picture"></div>
 					<!-- Add your name -->
 					<h1 id="colorlib-logo"><a href="index.html">Riya Bansilal Mulani</a></h1>
 					<span class="position"><a href="https://christuniversity.in/departments/yeshwanthpur%20campus/school%20of%20sciences/computer%20science">Master of Science in Data Science</a></span>
