--- a/index.html
+++ b/index.html
@@ -639,9 +639,9 @@
 											<!-- Edit content based on your Certifications -->
 											<div class="timeline-label">
 												<h2><a href="#">Tableau, Power BI, SQL, MongoDB</a> <span> </span></h2>
+												<p id="project-tool">~ from Coursera [IIT Madras]</p>
 												<p>Certifed by learnbay online learning platform for using data
 													visualization tools and handling data with SQL and NoSQL skills.</p>
-												<p id="project-tool">Certified from Coursera [IIT Madras]</p>
 											</div>
 										</div>
 									</article>
@@ -654,8 +654,8 @@
 											</div>
 											<div class="timeline-label">
 												<h2><a href="#">Python Programming</a> <span></span></h2>
+												<p id="project-tool">~ from Infosys Springboard</p>
 												<p>Have been certifed for python language at intermidiate level</p>
-												<p id="project-tool">Certified from Infosys Springboard</p>
 											</div>
 										</div>
 									</article>
@@ -668,9 +668,9 @@
 											</div>
 											<div class="timeline-label">
 												<h2><a href="#">Introduction to AI and NLP</a> <span></span></h2>
+												<p id="project-tool">~ from Google | Microsoft</p>
 												<p>Infosys Springboard has been best opensource platform to get my
 													fundamentals developed in field of Artificial Intelligence</p>
-												<p id="project-tool">Certified from Google | Microsoft</p>
 											</div>
 										</div>
 									</article>
