--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 								<div class="row">
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 										<!-- Edit google drive Link -->
-										<a href="https://drive.google.com/file/d/1SX7jN4HIJxLgfge7py6N2PZl7LCwxcq2/view?usp=drive_link"
+										<a href="https://drive.google.com/file/d/17dlzBDsnFvVo3zyq6i80Afojfe275T8O/view?usp=sharing"
 											target="_blank">
 											<div class="services color-4">
 												<span class="icon2">
@@ -162,9 +162,9 @@
 										</a>
 									</div>
 
-									<!-- Remove this div if you don't have account on Kaggle -->
+									<!-- Remove this div if you don't have account on Kaggle 
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-										<a href="#" target="_blank"> <!-- Add your link -->
+										<a href="#" target="_blank"> 
 											<div class="services color-3">
 												<span class="icon2">
 													<i class="fab fa-kaggle"></i>
@@ -173,6 +173,7 @@
 											</div>
 										</a>
 									</div>
+									-->
 
 								</div>
 
@@ -290,7 +291,7 @@
 									<div class="progress">
 										<div class="progress-bar color-3" role="progressbar" aria-valuenow="89"
 											aria-valuemin="0" aria-valuemax="100" style="width:89%">
-											<span>89%</span>
+											<span>92%</span>
 										</div>
 									</div>
 								</div>
@@ -340,7 +341,19 @@
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
 											aria-valuemin="0" aria-valuemax="100" style="width:60%">
-											<span>60%(learning)</span>
+											<span>75%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+								<div class="progress-wrap">
+									<h3>Big Data</h3>
+									<div class="progress">
+										<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
+											aria-valuemin="0" aria-valuemax="100" style="width:60%">
+											<span>50%(learning)</span>
 										</div>
 									</div>
 								</div>
@@ -387,6 +400,7 @@
 															<li>TRIMESTER I 3.78 GPA</li>
 															<li>TRIMESTER II 3.53 GPA </li>
 															<li>TRIMESTER III 3.66 GPA </li>
+															<li>TRIMESTER IV 3.5 GPA </li>
 														</ul>
 													</div>
 												</div>
@@ -464,10 +478,10 @@
 									</a>
 									<div class="desc">
 										<!-- Edit content for your specialization -->
-										<h3>Ukraine Russia War Data Analysis</h3>
-										<p>2022 Ukraine Russia War Exploratory Data Analysis, Analysis was done on the
-											day 167 of the war</p>
-										<p id="project-tool">Tableau | Power BI | Advance Excel | Python</p>
+										<h3>Data Science-Driven Enhancements in Filmmaking</h3>
+										<p>Improved the efficiency and accuracy of pre-production planning by automating the analysis and visualization
+											 of screenplays, reducing manual effort and minimizing production delays.</p>
+										<p id="project-tool">Python | NLP | ML | DJango</p>
 									</div>
 								</div>
 							</div>
@@ -482,10 +496,11 @@
 									</a>
 									<div class="desc">
 										<!-- Edit content for your specialization -->
-										<h3>Spoilt Food Detection System</h3>
-										<p>Used different varieties of gas sensors to detect spoilt food based on
-											concentration of gases produced by decaying food.</p>
-										<p id="project-tool">IoT | C++ | Arduino</p>
+										<h3>Data-Driven Approach for Reducing Employee Attrition </h3>
+										<p>This project focused on identifying the key factors driving employee attrition. Created visuals like 
+											doughnuts, word cloud, bullet, funnel, tree map, waterfall, Grouped stack and spiral charts to analyse factors such as 
+											business travel, salary, job satisfaction, and overtime.</p>
+										<p id="project-tool">Tableau | Advance Excel</p>
 									</div>
 								</div>
 							</div>
@@ -500,10 +515,10 @@
 									</a>
 									<div class="desc">
 										<!-- Edit content for your specialization -->
-										<h3>Wine Type Classification Using XGBoost</h3>
-										<p>This projecr contains comparision of Deep Learning Models which are CNN,
-											ResNet50 and VGG16.</p>
-										<p id="project-tool">Python | XGBoost</p>
+										<h3>Study on Crime Hotspot Identification for Safe Navigation</h3>
+										<p>This survey paper is a comparative analysis using geospatial data to identify crime hotspots and proposed a novel navigation 
+											algorithm to enhance user safety.</p>
+										<p id="project-tool">IITCEEE-3 IEEE International Conference</p>
 									</div>
 								</div>
 							</div>
@@ -597,6 +612,22 @@
 											</div>
 											<!-- Edit content based on your Certifications -->
 											<div class="timeline-label">
+												<h2><a href="#">Applications of Visualization in NLP, IoT, and Graph Analytics</a> <span> </span></h2>
+												<p id="project-tool">~ Resource Person at Christ University</p>
+												<p>As a resource person I have delivered a tech talk to audiance and ignited their knowledge on versitile 
+													applications of data visualization.</p>
+											</div>
+										</div>
+									</article>
+
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+										<div class="timeline-entry-inner">
+
+											<div class="timeline-icon color-1">
+												<i class="icon-pen2"></i>
+											</div>
+											<!-- Edit content based on your Certifications -->
+											<div class="timeline-label">
 												<h2><a href="#">Tableau, Power BI, SQL, MongoDB</a> <span> </span></h2>
 												<p id="project-tool">~ from Learnbay [online platform]</p>
 												<p>Certifed for laveraging data
@@ -678,8 +709,7 @@
 									<div class="colorlib-text">
 										<!-- Edit your contact address -->
 										<div class="addresses">
-											<p class="address-divider">Christ [Deemed to be University], HMT Layout, Nagasandara Post
-												Bangalore - 560073</p>
+											<p class="address-divider">Shri Laxmi Venkateshwara PG, 11 Orchid Park, Neeladri Nagar, Electronic City Phase 1, Bengaluru, Karnataka - 560100</p>
 											<p>Ramnagar, Surat, Gujarat - 365005</p>
 										</div>
 									</div>
